charts/hlf-peer/istio/serviceentry.yaml
# Used to fix the IP address for targeting organization; avoid ELB round-robin.
kind: ServiceEntry
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: peer0-target-organization
  namespace: my-organization-namespace
spec:
  hosts:
    - peer0-target-organization.cdi.testnet
  ports:
    - number: 7051
      protocol: TCP
      name: tcp-req
      targetPort: 7051
  resolution: STATIC
  endpoints:
    # static IP of ELB of target organization
    - address: 2.2.2.2
